--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="forgot">
                         <a href="">Forgotten Password?</a>
                     </div>
-                    <div class="button" id="btn">
+                    <div class="button" onclick="post()" id="btn">
                         <button>Log In</button>
                     </div>
                 </form>
