--- a/index.html
+++ b/index.html
@@ -4,36 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="flip.css">
+    <title>photo-Gallery</title>
+    <link rel="stylesheet" href="photo-css.css">
 </head>
 <body>
     <div class="container">
-        <div id="card">
-            <div class="front">
-                <div class="image">
-                    <img src="29 (4).jpg" alt="" >
-                </div>
-                <form action="" method="post" id="login">
-                    <div class="input-group">
-                        <input type="text" class="in-name" id='name'required autocomplete="off">
-                        <label for="name"class="name">User Name</label>
-                    </div>
-                    <div class="input-group">
-                        <input type="password" class="in-password" id='pass'required>
-                        <label for="pass"class="password">Password</label>
-                    </div>
-                    <div class="forgot">
-                        <a href="">Forgotten Password?</a>
-                    </div>
-                    <div class="button" onclick="post()" id="btn">
-                        <button>Log In</button>
-                    </div>
-                </form>
+        <div class="heading">
+            <h3>Photo <span>Gallery</span></h3>
+        </div>
+        <div class="box">
+            <div class="photo">
+                <img src="image\02 (2).jpg" alt="">
+                <img src="image\04 (3).jpg" alt="">
+                <img src="image\02 (3).jpg" alt="">
+                <img src="image\04 (2).jpg" alt="">
+                <img src="image\04 (4).jpg" alt="">
+                <img src="image\11 (3).jpg" alt="">
+                <img src="image\13 (2).jpg" alt="">
+                <img src="image\13 (6).jpg" alt="">
+                <img src="image\14 (5).jpg" alt="">
+                <img src="image\18 (2).jpg" alt="">
+                <img src="image\18 (5).jpg" alt="">
+                <img src="image\21 (2) - Copy.jpg" alt=""> 
+                <img src="image\25 (2).jpg" alt="">  
+                <img src="image\27 (3).jpg" alt="">    
+                <img src="image\29 (2).jpg" alt="">  
+                <img src="image\34 (2).jpg" alt="">     
+                  
             </div>
-            <div class="back"><p>back</p></div>
+            <div class="photo">
+                <img src="image\04 (5).jpg" alt="">
+                <img src="image\10 (2).jpg" alt="">
+                <img src="image\08 (4).jpg" alt="">
+                <img src="image\08 (2).jpg" alt="">
+                <img src="image\08 (3).jpg" alt="">
+                <img src="image\11 (4).jpg" alt="">
+                <img src="image\13 (3).jpg" alt="">
+                <img src="image\14 (3).jpg" alt="">
+                <img src="image\16 (2) - Copy.jpg" alt="">
+                <img src="image\18 (3).jpg" alt="">
+                <img src="image\19 (3).jpg" alt="">
+                <img src="image\22 (2).jpg" alt="">  
+                <img src="image\26 (2).jpg" alt=""> 
+                <img src="image\27 (4) - Copy.jpg" alt="">    
+                <img src="image\31 (2).jpg" alt="">  
+                <img src="image\35 (2).jpg" alt="">  
+                <img src="image\37 (2).jpg" alt=""> 
+                <img src="image\39 (3).jpg" alt="">
+            </div>
+            <div class="photo">
+                <img src="image\06 (2).jpg" alt="">
+                <img src="image\10 (3).jpg" alt="">
+                <img src="image\04 (6).jpg" alt="">
+                <img src="image\10 (3).jpg" alt="">
+                <img src="image\11 (2).jpg" alt="">
+                <img src="image\11.jpg" alt="">
+                <img src="image\13 (5).jpg" alt="">
+                <img src="image\14 (6).jpg" alt="">
+                <img src="image\17 (2).jpg" alt="">
+                <img src="image\18 (4).jpg" alt="">
+                <img src="image\20 (2).jpg" alt="">
+                <img src="image\23 (2).jpg" alt="">  
+                <img src="image\27 (2) - Copy.jpg" alt="">  
+                <img src="image\28 (2) - Copy.jpg" alt="">    
+                <img src="image\32 (2).jpg" alt="">  
+               
+            </div>
         </div>
     </div>
-    <script src="java.js"></script> 
 </body>
 </html>
